--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Ritulkr/Clone-Spotify'">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://ritul-spotify.netlify.app/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://clone-spotify-gilt.vercel.app/'">
               Live Demo
             </button>
           </div>
