--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <div class="contact-info-container">
         <img src="./assets/email_light.png" src-light="./assets/email_light.png" src-dark="./assets/email_dark.png"
           alt="Email icon" class="icon contact-icon email-icon" />
-        <p><a href="mailto:examplemail@gmail.com">kumarritul089@gmail.com</a></p>
+        <p><a href="mailto:kumarritul089@gmail.com">kumarritul089@gmail.com</a></p>
       </div>
       <div class="contact-info-container">
         <img src="./assets/linkedin_light.png" src-light="./assets/linkedin_light.png"
