--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h1 class="title">Ritul Kumar</h1>
       <p class="section__text__p2">Frontend Developer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/Ritul_Resume.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/Ritul-Kumar-Resume.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
