--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
             <img src="./assets/education_light.png" src-light="./assets/education_light.png"
               src-dark="./assets/education_dark.png" alt="Education icon" class="icon" />
             <h3>Education</h3>
-            <p><strong>Bachelor of Computer Applications (B.C.A)</strong>
-              <br />Birla Institute of Technology, 2022
-              <br /><strong>Master of Computer Applications (M.C.A)</strong>
+            <p><strong>Master of Computer Applications (M.C.A)</strong>
               <br />Galgotias University, 2024
+              <br /><strong>Bachelor of Computer Applications (B.C.A)</strong>
+              <br />Birla Institute of Technology, 2022
             </p>
 
           </div>
